Fix align text knowledge

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -44,6 +44,9 @@
 
 .knowlegdeTxt {
   width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .aboutResume {
